# Nfinit

./: .gitignore  README.md  package.json
backend/: .env.example  .gitignore  main.py  pyproject.toml
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/generate-code/: route.ts
frontend/src/components/: ChatPane.tsx  CommandBar.tsx  EditorPane.tsx  ViewportPane.tsx
frontend/src/lib/: constants.ts
